--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -77,7 +77,8 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/src/plugins:/opt/airflow/plugins
     - ${AIRFLOW_PROJ_DIR:-.}/src/include:/opt/airflow/include
     - ${AIRFLOW_PROJ_DIR:-.}/data:/opt/airflow/data  
-    - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs    
+    - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
+    - ..:/home/airflow/workspaces    
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
